create group and assign patient to group API

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -794,3 +794,6 @@ input.checkbox:checked:after {
   animation: shake 0.35s;
   border: 1px solid red;
 }
+.loading-indicator {
+  display: none;
+}
