--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,7 +27,7 @@
 					</div>
 					<input class="style_fix" type="submit" value="SIGNUP">
 				</form>
-				<p>Don't have an Account? <a href="#"> Signup Now!</a></p>
+				<p>Already have an Account? <a href="/api/user/loginPage" class="load_ajax"> Login Now!</a></p>
 			</div>
 		</div>
 		<!-- //copyright -->
@@ -56,3 +56,6 @@
 	<!-- //main -->
 </body>
 </html>
+<!-- <script src="/jQuery/script.min.js"></script>
+<script src="/Modernizr/modernizr.min.js"></script>
+<script src="/scripts/spa.js"></script> -->
